--- a/.stylelintrc
+++ b/.stylelintrc
@@ -198,6 +198,7 @@
     "scss/at-import-partial-extension-blacklist": ["scss"],
     "scss/at-mixin-argumentless-call-parentheses": "always",
     "scss/at-mixin-pattern": "[a-z]+(:?-[a-z]+)*",
+    "scss/at-rule-no-unknown": true,
     "scss/dollar-variable-colon-newline-after": "always-multi-line",
     "scss/dollar-variable-colon-space-after": "always-single-line",
     "scss/dollar-variable-colon-space-before": "never",
@@ -229,6 +230,7 @@
     "block-closing-brace-space-after": null,
     "block-no-empty": null,
     "at-rule-no-vendor-prefix": true,
+    "at-rule-no-unknown": null,
     "media-feature-name-no-vendor-prefix": true,
     "property-no-vendor-prefix": true,
     "selector-no-vendor-prefix": true,
